--- a/Demo-SpringBoot-SOA-BE/pom.xml
+++ b/Demo-SpringBoot-SOA-BE/pom.xml
@@ -13,13 +13,13 @@
     </parent>
 
     <groupId>com.example</groupId>
-    <artifactId>user-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>user-service</name>
-    <description>Demo User Service - Spring Boot SOA</description>
+    <artifactId>demo-soa</artifactId>
+    <version>1.0.0</version>
+    <name>Demo Spring Boot SOA</name>
+    <description>Run multiple Spring Boot services (User, Room, Review) from same project</description>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
     </properties>
 
     <dependencies>
@@ -50,7 +50,6 @@
             <scope>provided</scope>
         </dependency>
 
-
         <!-- Validation -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -68,14 +67,24 @@
 
     <build>
         <plugins>
+            <!-- Plugin Spring Boot -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <!-- Plugin compiler Java 21 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
-    <!-- Thêm repository để Maven chắc chắn tìm thấy Lombok -->
     <repositories>
         <repository>
             <id>central</id>
