--- a/Demo-SpringBoot-SOA-BE/src/main/resources/application.yml
+++ b/Demo-SpringBoot-SOA-BE/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
   application:
     name: demo-soa
   datasource:
-    url: jdbc:mysql://localhost:3306/user_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3307/user_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
-    password:
+    password: 040904
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
